added savepo method but not working

--- a/src/app/sharedcomponents/pogrid/pogrid.component.html
+++ b/src/app/sharedcomponents/pogrid/pogrid.component.html
@@ -75,8 +75,8 @@
                   ></p-dropdown>
                   <p-dropdown
                     *ngIf="col.field === 'VendorPart'"
-                    [options]="VendorPart"
-                    optionLabel="value"
+                    [options]="vendorPart"
+                    optionLabel="vendPartDesc"
                     autoWidth="false"
                     [style]="{ width: '200px' }"
                     editable="true"
