--- a/src/app/sharedcomponents/poheader/poheader.component.html
+++ b/src/app/sharedcomponents/poheader/poheader.component.html
@@ -94,5 +94,5 @@
       (click)="showDialog()"
     ></button>
   </div>
-  <app-pogrid [gridRow]="gridRow" [vendor]="selectedVendor"></app-pogrid>
+  <app-pogrid [form]="this.formGroup.value" [gridRow]="gridRow"></app-pogrid>
 </div>
