--- a/src/app/sharedcomponents/menu/menu.component.html
+++ b/src/app/sharedcomponents/menu/menu.component.html
@@ -1,7 +1,2 @@
-<div *ngIf="activeUser">
-    <p-menubar [model]="items">
-        <ng-template pTemplate="start">
-            <img src="https://primefaces.org/cdn/primeng/images/primeng.svg" height="40" class="mr-2" />
-        </ng-template>
-    </p-menubar>
-</div>
+<!-- <p-menubar [model]="items"></p-menubar> -->
+<p-tieredMenu [model]="items"></p-tieredMenu>
