--- a/src/app/sharedcomponents/invoice/invoice.component.css
+++ b/src/app/sharedcomponents/invoice/invoice.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
-  margin-bottom: 20px;
+  margin: 20px;
 }
 
 .field {
@@ -31,7 +31,7 @@ p-dropdown {
 }
 
 .button-wrapper {
-  margin-top: 10px;
+  margin: 20px;
   display: flex;
   flex-direction: row;
   gap: 10px;
