--- a/src/app/sharedcomponents/invoice/invoice.component.html
+++ b/src/app/sharedcomponents/invoice/invoice.component.html
@@ -43,7 +43,7 @@
 
       <div class="row secondrow">
         <div class="field">
-          <label for="email">Invoice Date</label>
+          <label>Invoice Date</label>
           <input
             type="date"
             pInputText
@@ -56,7 +56,7 @@
         </div>
 
         <div class="field">
-          <label for="email">Due Date</label>
+          <label>Due Date</label>
           <input
             type="date"
             pInputText
@@ -68,7 +68,7 @@
           />
         </div>
         <div class="field">
-          <label for="email">Remaining Allocation</label>
+          <label>Remaining Allocation</label>
           <input
             type="number"
             pInputText
@@ -81,12 +81,32 @@
       </div>
       <div class="button-wrapper">
         <button pButton pRipple label="Save"></button>
-        <button pButton pRipple label="Add New PO" (click)="addNewPO()"></button>
+        <button
+          pButton
+          pRipple
+          label="Add New PO"
+          (click)="addNewPO()"
+        ></button>
         <span class="p-input-icon-left">
           <i class="pi pi-search"></i>
-          <input pInputText placeholder="Type Vendor Part to search" />
+          <input
+            pInputText
+            formControlName="VendorPart"
+            placeholder="Type Vendor Part to search"
+            name="VendorPart"
+          />
         </span>
+        <p-fileUpload
+          mode="basic"
+          name="demo[]"
+          chooseIcon="pi pi-upload"
+          accept="image/*"
+          maxFileSize="1000000"
+          chooseLabel="Browse"
+          (onUpload)="(false)"
+        />
       </div>
     </p-card>
   </form>
 </div>
+<app-invoicegrid [poData]="filteredPoData"></app-invoicegrid>
