--- a/src/app/sharedcomponents/poheader/poheader.component.html
+++ b/src/app/sharedcomponents/poheader/poheader.component.html
@@ -94,5 +94,7 @@
       (click)="showDialog()"
     ></button>
   </div>
-  <app-pogrid [form]="this.formGroup.value" [gridRow]="gridRow"></app-pogrid>
+  <div style="width: 100%">
+    <app-pogrid [form]="this.formGroup.value" [gridRow]="gridRow"></app-pogrid>
+  </div>
 </div>
