--- a/src/app/sharedcomponents/invoice/invoice.component.html
+++ b/src/app/sharedcomponents/invoice/invoice.component.html
@@ -1,6 +1,6 @@
 <div class="card wrapper">
   <form [formGroup]="formGroup">
-    <p-card>
+    <p-card class="card">
       <div class="row firstrow">
         <div class="field">
           <label>Select Vendor</label>
@@ -52,6 +52,7 @@
             placeholder="Enter Invoice Date"
             autoWidth="false"
             [style]="{ width: '200px' }"
+            (change)="setDueDate($event)"
           />
         </div>
 
@@ -108,5 +109,10 @@
       </div>
     </p-card>
   </form>
+  <app-invoicegrid
+    [poData]="filteredPoData"
+    (totalInvAmountChange)="handleTotalInvAmountChange($event)"
+    style="width: 94vw"
+  >
+  </app-invoicegrid>
 </div>
-<app-invoicegrid [poData]="filteredPoData"></app-invoicegrid>
