--- a/src/app/sharedcomponents/invoicegrid/invoicegrid.component.html
+++ b/src/app/sharedcomponents/invoicegrid/invoicegrid.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="poData.length > 0">
   <div class="invoicegrid-container">
     <p-table
-      [columns]="columns"
+      [columns]="mini ? miniColumns : columns"
       [value]="poData"
       class="p-table"
       [tableStyle]="{ width: 'max-content', border: '1px solid #000' }"
@@ -31,142 +31,178 @@
       >
         <tr style="height: 46px">
           <td *ngFor="let col of columns" style="max-width: fit-content">
-            <ng-container
-              *ngIf="
-                !['checkBox', 'taxCalculated'].includes(col.field);
-                else checkboxColumn
-              "
-            >
+            <ng-container *ngIf="!mini">
               <ng-container
-                *ngIf="col.field !== 'deptCode'; else dropdownColumn"
+                *ngIf="
+                  !['checkBox', 'taxCalculated'].includes(col.field);
+                  else checkboxColumn
+                "
               >
                 <ng-container
-                  *ngIf="
-                    ![
-                      'ourRefNo',
-                      'expLineNo',
-                      'polineseq',
-                      'vendPartno',
-                      'quantity',
-                      'unitPrice',
-                      'preAmount',
-                      'taxAmount1',
-                      'invAmount',
-                      'invLineNo'
-                    ].includes(col.field);
-                    else noneditableColumn
-                  "
+                  *ngIf="col.field !== 'deptCode'; else dropdownColumn"
                 >
                   <ng-container
                     *ngIf="
-                      !['comments'].includes(col.field);
-                      else simpleTextBox
+                      ![
+                        'ourRefNo',
+                        'expLineNo',
+                        'polineseq',
+                        'vendPartno',
+                        'quantity',
+                        'unitPrice',
+                        'preAmount',
+                        'taxAmount1',
+                        'invAmount',
+                        'invLineNo'
+                      ].includes(col.field);
+                      else noneditableColumn
                     "
                   >
-                    <form [formGroup]="formGroups[rowIndex]">
-                      <div *ngIf="!['invTax', 'account'].includes(col.field)">
-                        <input
-                          (change)="invDetailsChanged(rowIndex, $event)"
-                          pInputText
-                          type="text"
-                          formControlName="{{ col.field }}"
-                          [style]="{ width: '75px' }"
-                        />
-                      </div>
-                      <div *ngIf="col.field === 'invTax'">
-                        <input
-                          (change)="invTaxChanged(rowIndex, $event)"
-                          pInputText
-                          type="text"
-                          formControlName="{{ col.field }}"
-                          [style]="{ width: '75px' }"
-                        />
-                      </div>
-                      <div *ngIf="col.field === 'account'">
-                        <input
-                          (change)="invTaxChanged(rowIndex, $event)"
-                          pInputText
-                          type="text"
-                          formControlName="{{ col.field }}"
-                          [style]="{ width: '150px' }"
-                        />
-                      </div>
-                    </form>
+                    <ng-container
+                      *ngIf="
+                        !['comments'].includes(col.field);
+                        else simpleTextBox
+                      "
+                    >
+                      <form [formGroup]="formGroups[rowIndex]">
+                        <div
+                          *ngIf="
+                            !['invTax', 'account', 'finalInvoice'].includes(
+                              col.field
+                            )
+                          "
+                        >
+                          <input
+                            (change)="invDetailsChanged(rowIndex, $event)"
+                            pInputText
+                            type="text"
+                            formControlName="{{ col.field }}"
+                            [style]="{ width: '75px' }"
+                          />
+                        </div>
+                        <div *ngIf="col.field === 'invTax'">
+                          <input
+                            (change)="invTaxChanged(rowIndex, $event)"
+                            pInputText
+                            type="text"
+                            formControlName="{{ col.field }}"
+                            [style]="{ width: '75px' }"
+                          />
+                        </div>
+                        <div *ngIf="col.field === 'account'">
+                          <input
+                            (change)="invTaxChanged(rowIndex, $event)"
+                            pInputText
+                            type="text"
+                            formControlName="{{ col.field }}"
+                            [style]="{ width: '150px' }"
+                          />
+                        </div>
+                      </form>
+                    </ng-container>
                   </ng-container>
                 </ng-container>
               </ng-container>
+
+              <ng-template #checkboxColumn>
+                <div *ngIf="col.field === 'checkBox'">
+                  <form [formGroup]="formGroups[rowIndex]">
+                    <input
+                      (change)="checkBoxChanged(rowIndex, $event)"
+                      type="checkbox"
+                      formControlName="{{ col.field }}"
+                    />
+                  </form>
+                </div>
+
+                <div *ngIf="col.field === 'taxCalculated'">
+                  <form [formGroup]="formGroups[rowIndex]">
+                    <input
+                      (change)="taxableChanged(rowIndex, $event)"
+                      type="checkbox"
+                      formControlName="{{ col.field }}"
+                      [checked]="rowData[col.field] === 1"
+                    />
+                    <label>{{ rowData[col.field] }}</label>
+                  </form>
+                </div>
+              </ng-template>
+
+              <ng-template #dropdownColumn>
+                <form [formGroup]="formGroups[rowIndex]">
+                  <div class="dropdown-container">
+                    <p-dropdown
+                      *ngIf="col.field === 'deptCode'"
+                      [options]="onlyDepartment"
+                      optionLabel="description"
+                      autoWidth="false"
+                      [style]="{ width: '150px' }"
+                      styleClass="showBelow"
+                      editable="true"
+                      [showClear]="true"
+                      formControlName="{{ col.field }}"
+                    ></p-dropdown>
+                  </div>
+                </form>
+              </ng-template>
+
+              <ng-template #noneditableColumn>
+                <form [formGroup]="formGroups[rowIndex]">
+                  <div *ngIf="col.field === 'invAmount'; else nonInvAmount">
+                    <input
+                      type="text"
+                      pInputText
+                      formControlName="{{ col.field }}"
+                      [style]="{ width: '75px' }"
+                    />
+                  </div>
+                  <ng-template #nonInvAmount>
+                    <div style="width: 75px; justify-content: center">
+                      {{ rowData[col.field] }}
+                    </div>
+                  </ng-template>
+                </form>
+              </ng-template>
+
+              <ng-template #simpleTextBox>
+                <form [formGroup]="formGroups[rowIndex]">
+                  <div>
+                    <input
+                      pInputText
+                      type="text"
+                      formControlName="{{ col.field }}"
+                      [style]="{ width: '100px' }"
+                    />
+                  </div>
+                </form>
+              </ng-template>
             </ng-container>
 
-            <ng-template #checkboxColumn>
-              <div *ngIf="col.field === 'checkBox'">
-                <form [formGroup]="formGroups[rowIndex]">
-                  <input
-                    (change)="checkBoxChanged(rowIndex, $event)"
-                    type="checkbox"
-                    formControlName="{{ col.field }}"
-                  />
-                </form>
-              </div>
-
-              <div *ngIf="col.field === 'taxCalculated'">
-                <form [formGroup]="formGroups[rowIndex]">
-                  <input
-                    (change)="taxableChanged(rowIndex, $event)"
-                    type="checkbox"
-                    formControlName="{{ col.field }}"
-                    [checked]="rowData[col.field] === 1"
-                  />
-                  <label>{{ rowData[col.field] }}</label>
-                </form>
-              </div>
-            </ng-template>
-
-            <ng-template #dropdownColumn>
-              <form [formGroup]="formGroups[rowIndex]">
-                <div class="dropdown-container">
-                  <p-dropdown
-                    *ngIf="col.field === 'deptCode'"
-                    [options]="onlyDepartment"
-                    optionLabel="description"
-                    autoWidth="false"
-                    [style]="{ width: '150px' }"
-                    styleClass="showBelow"
-                    editable="true"
-                    [showClear]="true"
-                    formControlName="{{ col.field }}"
-                  ></p-dropdown>
-                </div>
-              </form>
-            </ng-template>
-
-            <ng-template #noneditableColumn>
-              <form [formGroup]="formGroups[rowIndex]">
-                <div *ngIf="col.field === 'invAmount'; else nonInvAmount">
-                  <input
-                    type="text"
-                    pInputText
-                    formControlName="{{ col.field }}"
-                    [style]="{ width: '75px' }"
-                  />
-                </div>
-                <ng-template #nonInvAmount>
-                  <div style="width: 75px; justify-content: center">
+            <ng-container *ngIf="mini">
+              <div style="width: fit-content; justify-content: center">
+                <ng-container
+                  *ngIf="
+                    !['finalInvoice'].includes(col.field);
+                    else finalInvoiceColumn
+                  "
+                >
+                  <div style="max-width: fit-content; justify-content: center">
                     {{ rowData[col.field] }}
                   </div>
-                </ng-template>
-              </form>
-            </ng-template>
+                </ng-container>
+              </div>
+            </ng-container>
 
-            <ng-template #simpleTextBox>
+            <ng-template #finalInvoiceColumn>
               <form [formGroup]="formGroups[rowIndex]">
-                <div>
-                  <input
-                    pInputText
-                    type="text"
-                    formControlName="{{ col.field }}"
-                    [style]="{ width: '100px' }"
-                  />
-                </div>
+                <p-toggleButton
+                  [formControlName]="col.field"
+                  onLabel="Yes"
+                  offLabel="No"
+                  onIcon="pi pi-check"
+                  offIcon="pi pi-times"
+                  styleClass="w-full sm:w-10rem"
+                />
               </form>
             </ng-template>
           </td>
